--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "prop-types": "^15.7.2",
         "react": "^18.0.0-rc.0",
         "react-dom": "^18.0.0-rc.0",
+        "react-fetch": "^0.0.9",
         "react-scripts": "5.0.0"
     },
     "devDependencies": {
