--- a/package.json
+++ b/package.json
@@ -1,31 +1,40 @@
 {
-    "name": "react18-cookbook",
-    "version": "1.0.0",
-    "description": "Project to test new React 18 features and show differences on how the things are handled",
-    "keywords": ["react", "test", "demo"],
-    "main": "src/index.js",
-    "dependencies": {
-        "prop-types": "^15.7.2",
-        "react": "18.0.0-rc.0",
-        "react-dom": "18.0.0-rc.0",
-        "react-fetch": "^0.0.9",
-        "react-scripts": "5.0.0"
-    },
-    "devDependencies": {
-        "@babel/runtime": "7.13.8",
-        "eslint": "^8.4.1",
-        "eslint-config-airbnb": "^19.0.2",
-        "prettier": "^2.5.1",
-        "typescript": "4.1.3"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "lint:px": "./node_modules/.bin/prettier --write './src'",
-        "lint:js": "./node_modules/.bin/eslint --fix './src/**/*.{js,ts,tsx,jsx}'",
-        "lint": "npm run lint:px && npm run lint:js",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
-    },
-    "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "name": "react18-cookbook",
+  "version": "1.0.0",
+  "description": "Project to test new React 18 features and show differences on how the things are handled",
+  "keywords": [
+    "react",
+    "test",
+    "demo"
+  ],
+  "main": "src/index.js",
+  "dependencies": {
+    "prop-types": "15.8.1",
+    "react": "18.0.0-rc.0",
+    "react-dom": "18.0.0-rc.0",
+    "react-fetch": "0.0.9",
+    "react-scripts": "5.0.0"
+  },
+  "devDependencies": {
+    "@babel/runtime": "7.13.8",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb": "^19.0.2",
+    "prettier": "^2.5.1",
+    "typescript": "4.1.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "lint:px": "./node_modules/.bin/prettier --write './src'",
+    "lint:js": "./node_modules/.bin/eslint --fix './src/**/*.{js,ts,tsx,jsx}'",
+    "lint": "npm run lint:px && npm run lint:js",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
