--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "node-fetch": "^3.1.0",
     "prop-types": "15.8.1",
     "react": "18.0.0-rc.0",
     "react-dom": "18.0.0-rc.0",
